--- a/SampleApp/res/layout/activity_login.xml
+++ b/SampleApp/res/layout/activity_login.xml
@@ -42,6 +42,6 @@
         android:layout_below="@+id/button1"
         android:layout_marginLeft="63dp"
         android:layout_marginTop="34dp"
-        android:text="" />
+        android:text="dss" />
 
 </RelativeLayout>
