--- a/SampleApp/res/layout/activity_login.xml
+++ b/SampleApp/res/layout/activity_login.xml
@@ -41,7 +41,6 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/button1"
         android:layout_marginLeft="63dp"
-        android:layout_marginTop="34dp"
-        android:text="dss" />
+        android:layout_marginTop="34dp" />
 
 </RelativeLayout>
